<resources>
    // App Name
    <string name="app_name">SnapBoard</string>

    // Navigation
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tagFilterHint">Buscar...</string>

    // Board
    <string name="add_board">Novo Quadro</string>
    <string name="subject_title">Matéria</string>
    <string name="subject_hint">Matéria</string>
    <string name="tag_title">Tags</string>
    <string name="tag_hint">Tag</string>
    <string name="location_title">Local:</string>
    <string name="date_title">Data e Hora</string>
    <string name="save_button">Salvar</string>
    <string name="delete_button">Apagar</string>

    // Subject
    <string name="add_subject_button">Nova Matéria</string>
    <string name="name_title">Nome</string>
    <string name="name_hint">matéria</string>
    <string name="day_title">Dia</string>
    <string name="day_prompt">Escolha o Dia</string>
    <string-array name="day_list">
        <item>Segunda</item>
        <item>Terça</item>
        <item>Quarta</item>
        <item>Quinta</item>
        <item>Sexta</item>
        <item>Sabado</item>
        <item>Domingo</item>
    </string-array>
    <string name="start_title">Marcar Início</string>
    <string name="end_title">Marcar Fim</string>

    // Menu
    <string name="submenu_title">Matérias</string>
    <string name="view_subjects_button">Todas</string>

    // Settings
    <string name="settings_title">Sensor Foto</string>
    <string name="action_settings">Settings</string>
    <string name="none_button_on">Desligar</string>
    <string name="none_button_off">Ligar</string>
    <string name="low_button_on">Ligar (sel)</string>
    <string name="low_button_off">Baixa</string>
    <string name="high_button_on">Alta (sel)</string>
    <string name="high_button_off">Alta</string>

</resources>
