<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:id="@+id/add_subject"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.skai.snapboard.AddSubject">

    <EditText android:id="@+id/nameEditText"
        android:text="@string/name_title"
        android:hint="@string/name_hint"
        android:inputType="text"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>

    <TextView android:id="@+id/dayTitle"
        android:text="@string/day_title"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_below="@+id/nameEditText"/>

    <Spinner android:id="@+id/daySpinner"
        android:prompt="@string/day_prompt"
        android:entries="@array/day_list"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameEditText"
        android:layout_toEndOf="@+id/dayTitle"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <TextView android:id="@+id/startTitle"
        android:text="@string/start_title"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_below="@+id/dayTitle"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />

    <TextView android:id="@+id/endTitle"
        android:text="@string/end_title"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_below="@+id/startTitle"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />

    <Button android:id="@+id/deleteButton"
        android:text="@string/delete_button"
        android:onClick="returnHome"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button android:id="@+id/saveButton"
        android:text="@string/save_button"
        android:onClick="insertData"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/dialogButtonOK"
        android:layout_width="100px"
        android:layout_height="wrap_content"
        android:text=" Ok "
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        />

</RelativeLayout>