<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:id="@+id/add_board"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_weight="1"
    tools:context="com.skai.snapboard.AddBoard">


    <TextView android:id="@+id/locationTitle"
        android:text="@string/location_title"
        android:textColor="@color/colorPrimaryDark"

        android:layout_below="@+id/tagEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"/>

    <TextView android:id="@+id/locationTextView"
        android:text=""
        android:textColor="@color/colorAccent"
        android:textStyle="normal|italic"

        android:layout_below="@+id/locationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"/>

    <TextView android:id="@+id/dateTitle"
        android:text="@string/date_title"
        android:textColor="@color/colorPrimaryDark"

        android:layout_below="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"

        android:layout_centerHorizontal="true" />

    <TextView android:id="@+id/dateTextView"
        android:text=""
        android:textColor="@color/colorAccent"
        android:textStyle="normal|italic"

        android:layout_below="@+id/dateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true" />

    <Button android:id="@+id/saveButton"
        android:text="@string/save_button"
        android:onClick="saveData"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/boardView" />

    <Button android:id="@+id/deleteButton"
        android:text="@string/delete_button"
        android:onClick="deleteData"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignStart="@id/boardView"/>

    <EditText android:id="@+id/tagEditText"
        android:text="@string/tag_title"
        android:hint="@string/tag_hint"
        android:inputType="text"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/subjectEditText"
        android:layout_centerHorizontal="true" />

    <EditText android:id="@+id/subjectEditText"
        android:text="@string/subject_title"
        android:hint="@string/subject_hint"
        android:inputType="text"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/boardView"
        android:layout_centerHorizontal="true" />

    <ImageView android:id="@+id/boardView"

        android:layout_height="260dp"
        android:layout_width="400dp"
        android:layout_alignParentTop="true" />

</RelativeLayout>